--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,9 @@
 [versions]
-binaryCompat = "0.13.0"
-configuration = "0.1.0-beta02"
-gradleVersions = "0.46.0"
-kotlin = "1.8.10"
-publish = "0.24.0"
+binaryCompat = "0.13.2"
+configuration = "0.1.5"
+gradleVersions = "0.50.0"
+kotlin = "1.9.20"
+publish = "0.25.3"
 
 [libraries]
 gradle-kmp-configuration = { module = "io.matthewnelson:gradle-kmp-configuration-plugin", version.ref = "configuration" }
